@@ -70,6 +70,9 @@ Adapter precondition and routing
 - ADAPTER_PLUGIN_UNKNOWN
 - ADAPTER_PLUGIN_DUPLICATE
 - ADAPTER_PLUGIN_UNUSED (plugin provided where no plugin path is valid for resolved adapter route)
+- ADAPTER_POLICY_INVALID
+- ADAPTER_DISABLED_BY_POLICY
+- ADAPTER_TEMPORARILY_UNAVAILABLE
 - IAC_UNSUPPORTED_FORMAT
 - CICD_UNSUPPORTED_FORMAT
 - DOC_UNSUPPORTED_FORMAT
