@@ -12,6 +12,12 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Added explicit smoke-test coverage for root-level stale output detection under the same non-blocking warning model.
 - `operator_receipt.json` now carries additive digest links for `weftend/README.txt` and run sub-receipts (`analysis/*`, `host/*`) for stronger evidence-chain traceability.
 
+### Adapter maintenance controls
+- Added `weftend adapter doctor` for deterministic adapter readiness/maintenance reporting.
+- Added fail-closed adapter maintenance policy gate using `WEFTEND_ADAPTER_DISABLE=<adapter[,adapter...]>`.
+- Disabled adapter lanes now fail closed with `ADAPTER_TEMPORARILY_UNAVAILABLE` + `ADAPTER_DISABLED_BY_POLICY`.
+- Invalid maintenance policy tokens now fail closed with `ADAPTER_POLICY_INVALID`.
+
 ### Adapter strict-route hardening
 - CI/CD adapter discovery/path coverage now explicitly includes `.gitlab-ci.yaml` and `azure-pipelines*.yaml` in addition to existing `.yml` patterns.
 - IaC adapter discovery now explicitly includes `.template` to match implemented route support.
