@@ -20,6 +20,11 @@ Included
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
 - New adapter discovery command: `weftend adapter list`
+- New adapter maintenance/health command: `weftend adapter doctor`
+- Adapter maintenance gate added (operator-controlled, fail-closed):
+- `WEFTEND_ADAPTER_DISABLE=<adapter[,adapter...]>` disables selected adapter lanes without removing code.
+- Disabled adapter lanes fail closed with `ADAPTER_TEMPORARILY_UNAVAILABLE` and `ADAPTER_DISABLED_BY_POLICY`.
+- Invalid disable-policy tokens fail closed with `ADAPTER_POLICY_INVALID`.
 - Additive receipt/summary surface:
 - `safe_run_receipt.json` optional `adapter` metadata block
 - `contentSummary.adapterSignals` optional deterministic adapter signal block
